- Add rectangle conversion functions: LogicalRectToPhysical and PhysicalRectToLogical
- Implement ScaleValueForDPI and ScaleValueForDPIFloat for value scaling
- Replace GetDpiForWindowSafe calls with GetWindowDPI in dialogs.c
- Add global g_dpiManager variable for centralized DPI management
- Add dpi.c and dpi.h module to build system

User Interface:
- Add accessibility support with screen reader integration
- Implement `SetControlAccessibility` function for accessible names and descriptions
- Implement `NotifyAccessibilityStateChange` function for screen reader notifications
- Implement `IsScreenReaderActive` function to detect active screen readers (NVDA, Narrator, JAWS, etc.)
- Implement high contrast mode support with `IsHighContrastMode` function
- Implement `GetHighContrastColor` function to retrieve system colors for high contrast
- Implement `ApplyHighContrastColors` function to update dialog colors dynamically
- Add `WM_SYSCOLORCHANGE` handling to all dialog procedures for theme change detection
- Add accessible names to unified dialog controls (icon, message, buttons, tabs)
- Add screen reader notifications when dialogs are shown
- Add keyboard navigation system with tab order management
- Implement `SetDialogTabOrder` function to configure tab order for dialog controls
- Implement `CalculateTabOrder` function for automatic logical tab ordering (top-to-bottom, left-to-right)
- Implement `FreeTabOrderConfig` cleanup function for tab order configurations
- Add accelerator key system with conflict detection
- Implement `ValidateAcceleratorKeys` function to check for accelerator key conflicts
- Implement `GetAcceleratorChar` function to extract accelerator from button labels
- Implement `HasAcceleratorConflict` function to detect duplicate accelerators
- Add default accelerator keys to unified dialog buttons (Alt+D for Details, Alt+C for Copy, Alt+O for OK)
- Add focus management system for proper keyboard navigation